--- a/WebsiteFrontEnd/Views/Service.cshtml
+++ b/WebsiteFrontEnd/Views/Service.cshtml
@@ -84,16 +84,14 @@
 </section>
 
 <!-- Frequently asked questions -->
-<section class="section section-lg bg-default">
+@*<section class="section section-lg bg-default">
     <div class="container container-bigger">
         <div class="row row-ten row-50 justify-content-md-center justify-content-xl-between">
             <div class="col-md-9 col-lg-5 col-xxl-5">
-                @*<h3>Frequently Asked Questions</h3>*@
                 <a href="@frequentlyAskedQuestionsPageLink" class="animated-title-divider longer2">
                     <h3 class="little-smaller">@servicesUmbracoNode.Value("frequentlyAskedQuestionsTitle")</h3>
                     <div class="divider divider-default"></div>
                 </a>
-
 
                 <div class="panel-group panel-group-custom panel-group-corporate" id="accordion1" role="tablist" aria-multiselectable="false">
 
@@ -142,5 +140,5 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 
