--- a/WebsiteFrontEnd/Views/master.cshtml
+++ b/WebsiteFrontEnd/Views/master.cshtml
@@ -46,6 +46,57 @@
 
     var languageSpecificCssExtension = "/CSS/"+ currentLanguageCode + "/LanguageSpecs-"+ currentLanguageCode + ".css";
 
+    string metaDescription = string.Empty;
+    string metaKeyWords = string.Empty;
+    if (Model.Value("seoMetaDescription") != null && !string.IsNullOrEmpty(Model.Value("seoMetaDescription").ToString()))
+    {
+        metaDescription = Model.Value("seoMetaDescription").ToString();
+    }
+    else
+    {
+        metaDescription = home.Value("seoMetaDescription").ToString();
+    }
+
+    if (Model.Value("seoMetaKeyWords") != null && !string.IsNullOrEmpty(Model.Value("seoMetaKeyWords").ToString()))
+    {
+        metaKeyWords = Model.Value("seoMetaKeyWords").ToString();
+    }
+    else
+    {
+        metaKeyWords = home.Value("seoMetaKeyWords").ToString();
+    }
+
+
+    string ogSocial_Title = string.Empty;
+    string ogSocial_Description = string.Empty;
+    string ogSocial_ImageUrl = string.Empty;
+    if (Model.Value("seoSocialDataOgTitle") != null && !string.IsNullOrEmpty(Model.Value("seoSocialDataOgTitle").ToString()))
+    {
+        ogSocial_Title = Model.Value("seoSocialDataOgTitle").ToString();
+    }
+    else
+    {
+        ogSocial_Title = Model.Name + " - " + siteName;
+    }
+
+    if (Model.Value("seoSocialDataOgDescription") != null && !string.IsNullOrEmpty(Model.Value("seoSocialDataOgDescription").ToString()))
+    {
+        ogSocial_Description = Model.Value("seoSocialDataOgDescription").ToString();
+    }
+    else
+    {
+        ogSocial_Description = home.Value("seoSocialDataOgDescription").ToString();
+    }
+
+    if (Model.Value("seoSocialDataOgImage") != null && !string.IsNullOrEmpty(Model.Value("seoSocialDataOgImage").ToString()))
+    {
+        ogSocial_ImageUrl = Model.Value("seoSocialDataOgImage").ToString();
+    }
+    else
+    {
+        ogSocial_ImageUrl = home.Value("seoSocialDataOgImage").ToString();
+    }
+
 }
 
 <!doctype html>
@@ -55,10 +106,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>@Model.Name - @siteName</title>
-    <meta name="description" content="">
+    <meta name="description" content="@metaDescription">
+    <meta name="keywords" content="@metaKeyWords">
     <meta name="author" content="">
 
-    @*<link rel="stylesheet" href="@Url.Content("~/css/umbraco-starterkit-style.css")" />*@
+    <meta property="og:title" content="@ogSocial_Title">
+    <meta property="og:description" content="@ogSocial_Description">
+    <meta property="og:image" content="@ogSocial_ImageUrl">
+
     @RenderSection("Header", required: false)
 
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
@@ -71,7 +126,7 @@
     <link rel="stylesheet" href="/css/custom-new.css">
     <!-- Lang Specific -->
     <link rel="stylesheet" href="@languageSpecificCssExtension" />
-     
+
 </head>
 
 <body>
@@ -659,32 +714,45 @@
                         </div>
                     </div>
                     }
-                    <div class="col-md-6 col-xl-4">
-                        <h6>@Umbraco.GetDictionaryValue("Contact Us")</h6>
-                        <!-- RD Mailform-->
-                        <form class="rd-mailform rd-mailform-sm" id="MailLayoutContactUsForm" data-form-output="form-output-global" data-form-type="contact"
-                              method="post" action="/api/ContactUs/ProcessQuickContactUsEmail" enctype="application/x-www-form-urlencoded">
-                            <div class="form-wrap form-wrap-validation">
-                                <input class="form-input" id="form-footer-name" type="text" name="FullName" data-constraints="@@Required" />
-                                <label class="form-label" for="form-footer-name">@Umbraco.GetDictionaryValue("Name")</label>
-                            </div>
-                            <div class="form-wrap form-wrap-validation">
-                                <input class="form-input" id="form-footer-email" type="email" name="Email" data-constraints="@@Email @@Required" />
-                                <label class="form-label" for="form-footer-email">@Umbraco.GetDictionaryValue("E-mail")</label>
-                            </div>
-                            <div class="form-wrap form-wrap-validation">
-                                <label class="form-label" for="form-footer-message">@Umbraco.GetDictionaryValue("Message")</label>
-                                <textarea class="form-input" id="form-footer-message" name="Description" data-constraints="@@Required"></textarea>
-                            </div>
-                            <div class="form-button">
-                                <button class="button button-sm button-primary" type="submit">@Umbraco.GetDictionaryValue("Send message")</button>
-                            </div>
-                        </form>
-                        <div class="success-message fade-in">
-                            <div>Thank you for contacting us! </div>
-                            <div>We will get back to you as soon as possible.</div>
+                <div class="col-md-6 col-xl-4 MailLayoutContactUsFormWrapper">
+                    <h6>@Umbraco.GetDictionaryValue("Contact Us")</h6>
+                    <form class="rd-mailform rd-mailform-sm" id="MailLayoutContactUsForm" data-form-output="form-output-global" data-form-type="contact"
+                          method="post" action="/api/ContactUs/ProcessQuickContactUsEmail" enctype="application/x-www-form-urlencoded">
+                        <div class="form-wrap form-wrap-validation">
+                            <input class="form-input" id="form-footer-name" type="text" name="FullName" data-constraints="@@Required" required />
+                            <label class="form-label" for="form-footer-name">@Umbraco.GetDictionaryValue("Name")</label>
+                        </div>
+                        <div class="form-wrap form-wrap-validation">
+                            <input class="form-input" id="form-footer-email" type="email" name="Email" data-constraints="@@Email @@Required" required />
+                            <label class="form-label" for="form-footer-email">@Umbraco.GetDictionaryValue("E-mail")</label>
+                        </div>
+                        <div class="form-wrap form-wrap-validation">
+                            <label class="form-label" for="form-footer-message">@Umbraco.GetDictionaryValue("Message")</label>
+                            <textarea class="form-input" id="form-footer-message" name="Description" data-constraints="@@Required" required></textarea>
+                        </div>
+                        <div class="form-button">
+                            <button class="button button-sm button-primary" type="submit">@Umbraco.GetDictionaryValue("Send message")</button>
+                        </div>
+                    </form>
+                    <div class="success-message fade-in">
+                        <div>
+                            
+                            @Html.Raw(home.Value("quickBottomContactUsSuccessText1").ToString().Replace("\n", "<br/>"))
+                        </div>
+                        <div>
+                            @Html.Raw(home.Value("quickBottomContactUsSuccessText2").ToString().Replace("\n", "<br/>"))
+                            
                         </div>
                     </div>
+                    <div class="error-message fade-in">
+                        <div>
+                            @Html.Raw(home.Value("quickBottomContactUsErrorText1").ToString().Replace("\n", "<br/>"))
+                        </div>
+                        <div>
+                            @Html.Raw(home.Value("quickBottomContactUsErrorText2").ToString().Replace("\n", "<br/>"))
+                        </div>
+                    </div>
+                </div>
                 </div>
                 <p class="right">
                     @home.Value("footerTextByUsingThisWebsiteYouConsent")
@@ -695,43 +763,10 @@
         </footer>
 
     </div>
-    @*<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
-        <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>*@
 
     <script src="/js/jquery-3.1.0.min.js"></script>
     <script src="/js/jquery.validate.min.js"></script>
     <script src="/js/jquery.validate.unobtrusive.min.js"></script>
-
-    @*<script type="text/javascript">*@
-
-    @*//$(document).ready(function () {
-
-            /*$('.rd-mailform button[type="submit"]').click(function (e)
-            {
-                $('.rd-mailform').validate();
-
-                if ($('.rd-mailform .form-wrap-validation.has-error').length > 0)
-                {
-                    $('.rd-mailform .form-wrap-validation.has-error')[0].focus();
-                    e.preventDefault();
-                    return false;
-                }
-
-                alert('form is valid');
-            });*/
-        //});*@
-
-    @*</script>*@
-
-
-
-
-    @*<script src="@Url.Content("~/scripts/umbraco-starterkit-app.js")"></script>*@
-
-    @*Global Mailform Output*@
-    <!--<div class="snackbars" id="form-output-global"></div>-->
-    @*Javascript*@
     <script src="/js/core.min.js"></script>
     <script src="/js/script.js"></script>
 
